Modified payment flow for prod